--- a/src/components/reply-user-comment/replyUserComment.css
+++ b/src/components/reply-user-comment/replyUserComment.css
@@ -99,6 +99,7 @@
 .reply-user-comment-user-comment {
     color: var(--neutral-grayish-blue);
     grid-area: userComment;
+    line-height: 1.350;
 }
 
 .reply-user-comment-score-wrapper {
